[tool.poetry]
name = "live-162-heroku"
version = "0.1.0"
description = ""
authors = ["paulinhomacedo <macedopham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
Flask-Migrate = "^2.7.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.17.0"
dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
